[ci skip] Pushing vault_kubernetes files
Signed-off-by: viniciushrcs <viniciushrcs@gmail.com>

--- a/platforms/hyperledger-fabric/releases/dev/supplychain/supplychain/supplychain-vaultkubernetes-job.yaml
+++ b/platforms/hyperledger-fabric/releases/dev/supplychain/supplychain/supplychain-vaultkubernetes-job.yaml
@@ -22,7 +22,7 @@ spec:
       component_type: orderer
       namespace: supplychain-net    
       images:
-        alpineutils: ghcr.io/hyperledger/alpine-utils:1.0
+        alpineutils: index.docker.io/hyperledgerlabs/alpine-utils:1.0
 
     vault:
       reviewer_service: vault-reviewer
